# Matterhorn

./: .gitignore  README.md
backend/: matterhorn-backend.cabal
backend/src/: Main.hs  Phases.hs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: phases.js
frontend/src/components/Phase-canvas/: PhaseCanvas.jsx
frontend/src/components/Phase-node/: PhaseNode.jsx  PhaseNode.scss
frontend/src/components/Phase-toolbar/: PhaseToolbar.jsx
frontend/src/pages/PhaseEditor/: PhaseEditor.jsx  PhaseEditor.scss
