cabal-version:       2.2

name:                matterhorn-backend
version:             0.1.0.0
homepage:            https://github.com/Lugi-alo/Matterhorn.git
license:             BSD-3-Clause
author:              Elizabeth Olohan
maintainer:          example@example.com
copyright:           2025 Elizabeth Olohan
category:            Web
build-type:          Simple

executable matterhorn-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Phases
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5,
    servant,
    servant-server,
    warp,
    wai,
    aeson,
    text,
    containers,
    bytestring,
    transformers,
    mtl
  ghc-options:         
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints